Add alarm units

--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -160,6 +160,7 @@ Resources:
       Statistic: Maximum
       Threshold: 900000 # milliseconds
       TreatMissingData: notBreaching
+      Units: Milliseconds
   AnalyticsBigqueryFunctionKinesisIteratorBehindAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -195,6 +196,7 @@ Resources:
       Statistic: Maximum
       Threshold: 3600000 # milliseconds
       TreatMissingData: notBreaching
+      Units: Milliseconds
   AnalyticsBigqueryFunctionKinesisIteratorStalledAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -496,6 +498,7 @@ Resources:
       Statistic: Maximum
       Threshold: 900000 # milliseconds
       TreatMissingData: notBreaching
+      Units: Milliseconds
   AnalyticsDynamoDbFunctionKinesisIteratorBehindAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -530,6 +533,7 @@ Resources:
       Statistic: Maximum
       Threshold: 3600000 # milliseconds
       TreatMissingData: notBreaching
+      Units: Milliseconds
   AnalyticsDynamoDbFunctionKinesisIteratorStalledAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -730,6 +734,7 @@ Resources:
       Statistic: Maximum
       Threshold: 900000 # milliseconds
       TreatMissingData: notBreaching
+      Units: Milliseconds
   AnalyticsPingbacksFunctionKinesisIteratorBehindAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -764,6 +769,7 @@ Resources:
       Statistic: Maximum
       Threshold: 3600000 # milliseconds
       TreatMissingData: notBreaching
+      Units: Milliseconds
   AnalyticsPingbacksFunctionKinesisIteratorStalledAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -1029,6 +1035,7 @@ Resources:
       Statistic: Maximum
       Threshold: 900000 # milliseconds
       TreatMissingData: notBreaching
+      Units: Milliseconds
   AnalyticsRedisFunctionKinesisIteratorBehindAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -1063,6 +1070,7 @@ Resources:
       Statistic: Maximum
       Threshold: 3600000 # milliseconds
       TreatMissingData: notBreaching
+      Units: Milliseconds
   AnalyticsRedisFunctionKinesisIteratorStalledAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
