--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -160,7 +160,7 @@ Resources:
       Statistic: Maximum
       Threshold: 900000 # milliseconds
       TreatMissingData: notBreaching
-      Units: Milliseconds
+      Unit: Milliseconds
   AnalyticsBigqueryFunctionKinesisIteratorBehindAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -196,7 +196,7 @@ Resources:
       Statistic: Maximum
       Threshold: 3600000 # milliseconds
       TreatMissingData: notBreaching
-      Units: Milliseconds
+      Unit: Milliseconds
   AnalyticsBigqueryFunctionKinesisIteratorStalledAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -498,7 +498,7 @@ Resources:
       Statistic: Maximum
       Threshold: 900000 # milliseconds
       TreatMissingData: notBreaching
-      Units: Milliseconds
+      Unit: Milliseconds
   AnalyticsDynamoDbFunctionKinesisIteratorBehindAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -533,7 +533,7 @@ Resources:
       Statistic: Maximum
       Threshold: 3600000 # milliseconds
       TreatMissingData: notBreaching
-      Units: Milliseconds
+      Unit: Milliseconds
   AnalyticsDynamoDbFunctionKinesisIteratorStalledAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -734,7 +734,7 @@ Resources:
       Statistic: Maximum
       Threshold: 900000 # milliseconds
       TreatMissingData: notBreaching
-      Units: Milliseconds
+      Unit: Milliseconds
   AnalyticsPingbacksFunctionKinesisIteratorBehindAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -769,7 +769,7 @@ Resources:
       Statistic: Maximum
       Threshold: 3600000 # milliseconds
       TreatMissingData: notBreaching
-      Units: Milliseconds
+      Unit: Milliseconds
   AnalyticsPingbacksFunctionKinesisIteratorStalledAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -1035,7 +1035,7 @@ Resources:
       Statistic: Maximum
       Threshold: 900000 # milliseconds
       TreatMissingData: notBreaching
-      Units: Milliseconds
+      Unit: Milliseconds
   AnalyticsRedisFunctionKinesisIteratorBehindAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -1070,7 +1070,7 @@ Resources:
       Statistic: Maximum
       Threshold: 3600000 # milliseconds
       TreatMissingData: notBreaching
-      Units: Milliseconds
+      Unit: Milliseconds
   AnalyticsRedisFunctionKinesisIteratorStalledAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
