Add alarm SMS function

--- a/devops/chat-ops/cloudwatch-alarms/template.yml
+++ b/devops/chat-ops/cloudwatch-alarms/template.yml
@@ -10,6 +10,8 @@ Parameters:
     AllowedPattern: ^$|^(o-[a-z0-9]{4,32})$
   SlackMessageRelaySnsTopicArn:
     Type: String
+  FatalSmsContactListSnsTopicArn:
+    Type: String
   CrossAccountCloudWatchAlarmIamRoleName:
     Type: String
 
@@ -31,10 +33,11 @@ Resources:
         Effect: Allow
         Principal: "*"
         Resource: !GetAtt CloudWatchAlarmsEventBus.Arn
-  CloudWatchAlarmsFunction:
+
+  CloudWatchAlarmsSlackFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: src/slack
       Description: >-
         Sends messages to Slack in response to CloudWatch Alarms state changes
         from across the organization. All accounts and all regions forward
@@ -76,11 +79,68 @@ Resources:
         prx:ops:environment: Production
         prx:dev:application: DevOps
       Timeout: 20
-  CloudWatchAlarmsFunctionLogGroup:
+  CloudWatchAlarmsSlackFunctionLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Sub /aws/lambda/${CloudWatchAlarmsFunction}
+      LogGroupName: !Sub /aws/lambda/${CloudWatchAlarmsSlackFunction}
       RetentionInDays: 14
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: DevOps }
+
+  CloudWatchAlarmsSmsFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: src/sms
+      Description: >-
+        Sends messages to SMS phone numbers in response to CloudWatch Alarms
+        state changes from across the organization. All accounts and all
+        regions forward CloudWatch Alarms state change events to the custom
+        event bus that has rules to trigger this function.
+      Environment:
+        Variables:
+          AWS_NODEJS_CONNECTION_REUSE_ENABLED: "1"
+          FATAL_SMS_CONTACT_LIST_SNS_TOPIC_ARN: !Ref FatalSmsContactListSnsTopicArn
+      Events:
+        Alarms:
+          Properties:
+            EventBusName: !Ref CloudWatchAlarmsEventBus
+            Pattern:
+              detail-type:
+                - CloudWatch Alarm State Change
+              source:
+                - aws.cloudwatch
+          Type: EventBridgeRule
+      Handler: index.handler
+      MemorySize: 128
+      Policies:
+        - Statement:
+            - Action: sns:Publish
+              Effect: Allow
+              Resource: !Ref FatalSmsContactListSnsTopicArn
+          Version: "2012-10-17"
+      Runtime: nodejs14.x
+      Tags:
+        prx:meta:tagging-version: "2021-04-07"
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
+        prx:ops:environment: Production
+        prx:dev:application: DevOps
+      Timeout: 20
+  CloudWatchAlarmsSmsFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${CloudWatchAlarmsSmsFunction}
+      RetentionInDays: 14
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:ops:environment, Value: Production }
+        - { Key: prx:dev:application, Value: DevOps }
 
 Outputs:
   CloudWatchAlarmsEventBusArn:
