--- a/devops/devops-cd-pipeline.yml
+++ b/devops/devops-cd-pipeline.yml
@@ -39,6 +39,7 @@ Parameters:
   PrxLegacyAccountId: { Type: String }
   SlackAccessToken: { Type: String }
   SlackSigningSecet: { Type: String }
+  FatalSmsContactListSnsTopicArn: { Type: String }
   CloudWatchAlarmReminderRegions: { Type: CommaDelimitedList }
   CloudWatchAlarmReminderAccountIds: { Type: CommaDelimitedList }
 
@@ -360,6 +361,7 @@ Resources:
                   {
                     "OrganizationId": "${OrganizationId}",
                     "SlackMessageRelaySnsTopicArn": "#{slack_app_deploy.SlackMessageRelaySnsTopicArn}",
+                    "FatalSmsContactListSnsTopicArn": "${FatalSmsContactListSnsTopicArn}",
                     "CrossAccountCloudWatchAlarmIamRoleName": "${CrossAccountCloudWatchAlarmIamRoleName}"
                   }
                 RoleArn: !GetAtt CloudFormationRole.Arn
