Add more phone number subscriptions

--- a/etc/sms-contact-list/template.yml
+++ b/etc/sms-contact-list/template.yml
@@ -54,6 +54,38 @@ Resources:
       Protocol: sms
       TopicArn: !Ref Topic
 
+  PhoneNumber2Subscription:
+    Type: AWS::SNS::Subscription
+    Condition: HasPhoneNumber2
+    Properties:
+      Endpoint: !Ref PhoneNumber2
+      Protocol: sms
+      TopicArn: !Ref Topic
+
+  PhoneNumber3Subscription:
+    Type: AWS::SNS::Subscription
+    Condition: HasPhoneNumber3
+    Properties:
+      Endpoint: !Ref PhoneNumber3
+      Protocol: sms
+      TopicArn: !Ref Topic
+
+  PhoneNumber4Subscription:
+    Type: AWS::SNS::Subscription
+    Condition: HasPhoneNumber4
+    Properties:
+      Endpoint: !Ref PhoneNumber4
+      Protocol: sms
+      TopicArn: !Ref Topic
+
+  PhoneNumber5Subscription:
+    Type: AWS::SNS::Subscription
+    Condition: HasPhoneNumber5
+    Properties:
+      Endpoint: !Ref PhoneNumber5
+      Protocol: sms
+      TopicArn: !Ref Topic
+
 Outputs:
   TopicArn:
     Value: !Ref Topic
