Use inline IAM user for new Exchange stack

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -57,6 +57,7 @@ Parameters:
   SharedAuroraPostgresqlEndpoint: { Type: String }
   SharedAuroraPostgresqlPort: { Type: String }
   AnnounceResourcePrefix: { Type: String }
+  EmailNetworkQueueArn: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
   FeedsS3BucketArn: { Type: String }
   MediajointS3BucketArn: { Type: String }
@@ -227,6 +228,7 @@ Resources:
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
+        EmailNetworkQueueArn: !Ref EmailNetworkQueueArn
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         MediajointS3BucketArn: !Ref MediajointS3BucketArn
       Tags:
