--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -871,6 +871,7 @@ Resources:
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
+        EmailNetworkQueueArn: !GetAtt SharedAnnounceStack.Outputs.EmailNetworkQueueArn
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         FeedsS3BucketArn: !Ref FeedsS3BucketArn
         MediajointS3BucketArn: !Ref MediajointS3BucketArn
