--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -52,6 +52,7 @@ Parameters:
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
   AnnounceResourcePrefix: { Type: String }
+  EmailNetworkQueueArn: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
   MediajointS3BucketArn: { Type: String }
 
@@ -185,6 +186,97 @@ Resources:
         - { Key: prx:ops:cloudwatch-log-group-name, Value: !Ref WebTaskLogGroup }
         - { Key: prx:dev:application, Value: Exchange }
 
+  TaskUser:
+    # TODO Someday when the AWS client within the Exchange app has support for
+    # role-based authentication, these policies should be moved into the task
+    # role, and the user should be removed
+    Type: AWS::IAM::User
+    Properties:
+      ManagedPolicyArns:
+        # When the user key/secret are passed into the task def, they are
+        # available when aws-secrets runs, so they'll be used for those calls,
+        # rather than the task role.
+        - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceDecryptPolicyArn
+        - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceAccessPolicyArn
+      Policies:
+        - PolicyDocument:
+            Statement:
+              - Action: sns:Publish
+                Effect: Allow
+                Resource: !Ref PorterJobExecutionSnsTopicArn
+                Sid: AllowPorterJobExecution
+            Version: "2012-10-17"
+          PolicyName: Porter
+        - PolicyDocument:
+            Statement:
+              - Action:
+                  - s3:Get*
+                  - s3:ListBucket*
+                  - s3:Put*
+                Effect: Allow
+                Resource: !Ref MediajointS3BucketArn
+                Sid: AllowBucketActions
+              - Action:
+                  - s3:AbortMultipartUpload
+                  - s3:Delete*
+                  - s3:Get*
+                  - s3:List*
+                  - s3:Put*
+                  - s3:RestoreObject
+                Effect: Allow
+                Resource: !Sub ${MediajointS3BucketArn}/*
+                Sid: AllowObjectActions
+            Version: "2012-10-17"
+          PolicyName: MediajointBucket
+        - PolicyDocument:
+            Statement:
+              - Action: sqs:ListQueues
+                Effect: Allow
+                Resource: "*"
+                Sid: AllowSqsList
+              - Action:
+                  - sqs:ChangeMessageVisibility
+                  - sqs:DeleteMessage
+                  - sqs:GetQueueAttributes
+                  - sqs:GetQueueUrl
+                  - sqs:ReceiveMessage
+                  - sqs:SendMessage
+                Effect: Allow
+                Resource:
+                  - !GetAtt FixerAudioQueue.Arn
+                  - !GetAtt PerformSolrSaveQueue.Arn
+                  - !GetAtt PerformSolrDestroyQueue.Arn
+                  - !GetAtt PublishPieceQueue.Arn
+                  - !GetAtt UnpublishPieceQueue.Arn
+                  - !GetAtt PurchasePieceQueue.Arn
+                  - !GetAtt DropBoxFileQueue.Arn
+                  - !GetAtt UpdateUserTypeQueue.Arn
+                  - !GetAtt EmailUsersQueue.Arn
+                  - !GetAtt UpdatePieceLengthQueue.Arn
+                  - !GetAtt EmailGroupQueue.Arn
+                  - !GetAtt SayWhenQueue.Arn
+                  - !GetAtt DeliveryUpdateQueue.Arn
+                  - !GetAtt StationPasswordQueue.Arn
+                  - !GetAtt ApproveSubscriptionQueue.Arn
+                  - !GetAtt EmailNotificationsQueue.Arn
+                  - !GetAtt PorterCallbackQueue.Arn
+                  - !Ref EmailNetworkQueueArn
+                Sid: AllowSqsSendForEmails
+            Version: "2012-10-17"
+          PolicyName: Queues
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Network }
+  TaskUserAccessKey:
+    Type: AWS::IAM::AccessKey
+    Properties:
+      UserName: !Ref TaskUser
+
   ExecutionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -205,7 +297,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Exchange }
-  TaskRole: # TODO Refactor IAM user into this role: prx.org, exchange-staging
+  TaskRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -215,55 +307,6 @@ Resources:
             Principal:
               Service: ecs-tasks.amazonaws.com
         Version: "2012-10-17"
-      ManagedPolicyArns:
-        - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceDecryptPolicyArn
-        - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceAccessPolicyArn
-      Policies:
-        - PolicyDocument:
-            Statement:
-              - Action: sns:Publish
-                Effect: Allow
-                Resource: !Ref PorterJobExecutionSnsTopicArn
-            Version: "2012-10-17"
-          PolicyName: PorterSnsPublish
-        - PolicyDocument:
-            Statement:
-              - Action: sqs:* # TODO Seems very permissive
-                Effect: Allow
-                Resource: !Sub arn:${AWS::Partition}:sqs:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}* # TODO Use specific queues, the ones in this template and the email on from shared-announce
-            Version: "2012-10-17"
-          PolicyName: SqsQueues
-        - PolicyDocument:
-            Statement:
-              - Action:
-                  - sqs:ChangeMessageVisibility
-                  - sqs:CreateQueue
-                  - sqs:DeleteMessage
-                  - sqs:GetQueueAttributes
-                  - sqs:GetQueueUrl
-                  - sqs:ListQueues
-                  - sqs:ReceiveMessage
-                  - sqs:SendMessage
-                  - sqs:SetQueueAttributes
-                Effect: Allow
-                Resource: "*" # TODO Seems very permissive
-            Version: "2012-10-17"
-          PolicyName: LegacySqsQueues
-        - PolicyDocument: # TODO Cleanup this policy
-            Statement:
-              - Action:
-                  - s3:AbortMultipartUpload
-                  - s3:DeleteObject
-                  - s3:Get*
-                  - s3:List*
-                  - s3:Put*
-                  - s3:RestoreObject
-                Effect: Allow
-                Resource:
-                  - !Ref MediajointS3BucketArn
-                  - !Sub ${MediajointS3BucketArn}/*
-            Version: "2012-10-17"
-          PolicyName: MediajointS3
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -293,7 +336,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: !If [IsProduction, 5, 2]
+      DesiredCount: 0 # !If [IsProduction, 5, 2]
       EnableECSManagedTags: true
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
@@ -404,7 +447,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: !If [IsProduction, 6, 0] # TODO
+      DesiredCount: 0 # !If [IsProduction, 6, 0] # TODO
       EnableECSManagedTags: true
       PropagateTags: TASK_DEFINITION
       Tags:
