--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -813,3 +813,5 @@ Resources:
 Outputs:
   ResourcePrefix:
     Value: !Sub ${Hash.Hash}_${EnvironmentTypeAbbreviation}
+  EmailNetworkQueueArn:
+    Value: !GetAtt EmailNetworkQueue.Arn
