Use wildcard SQS policy

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -52,7 +52,6 @@ Parameters:
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
   AnnounceResourcePrefix: { Type: String }
-  EmailNetworkQueueArn: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
   MediajointS3BucketArn: { Type: String }
 
@@ -242,25 +241,7 @@ Resources:
                   - sqs:ReceiveMessage
                   - sqs:SendMessage
                 Effect: Allow
-                Resource:
-                  - !GetAtt FixerAudioQueue.Arn
-                  - !GetAtt PerformSolrSaveQueue.Arn
-                  - !GetAtt PerformSolrDestroyQueue.Arn
-                  - !GetAtt PublishPieceQueue.Arn
-                  - !GetAtt UnpublishPieceQueue.Arn
-                  - !GetAtt PurchasePieceQueue.Arn
-                  - !GetAtt DropBoxFileQueue.Arn
-                  - !GetAtt UpdateUserTypeQueue.Arn
-                  - !GetAtt EmailUsersQueue.Arn
-                  - !GetAtt UpdatePieceLengthQueue.Arn
-                  - !GetAtt EmailGroupQueue.Arn
-                  - !GetAtt SayWhenQueue.Arn
-                  - !GetAtt DeliveryUpdateQueue.Arn
-                  - !GetAtt StationPasswordQueue.Arn
-                  - !GetAtt ApproveSubscriptionQueue.Arn
-                  - !GetAtt EmailNotificationsQueue.Arn
-                  - !GetAtt PorterCallbackQueue.Arn
-                  - !Ref EmailNetworkQueueArn
+                Resource: !Sub arn:${AWS::Partition}:sqs:${AWS::Region}:${AWS::AccountId}:${AnnounceResourcePrefix}*
                 Sid: AllowSqsSendForEmails
             Version: "2012-10-17"
           PolicyName: Queues
