Move some Exchange envars into task defs

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -45,8 +45,12 @@ Parameters:
   DovetailCdnArrangerWorkspaceBucketArn: { Type: String }
   DeploymentPackageBucketName: { Type: String }
   S3StaticSiteDeployServiceToken: { Type: String }
+  BetaHostname: { Type: String }
   CastleHostname: { Type: String }
+  LegacyCastleHostname: { Type: String }
   CmsHostname: { Type: String }
+  CountHostname: { Type: String }
+  ExchangeHostname: { Type: String }
   FeederHostname: { Type: String }
   IdHostname: { Type: String }
   MetricsHostname: { Type: String }
@@ -217,6 +221,7 @@ Resources:
         RegionMode: !Ref RegionMode
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
         AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
         CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
@@ -229,6 +234,12 @@ Resources:
         AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         MediajointS3BucketArn: !Ref MediajointS3BucketArn
+        IdHostname: !Ref IdHostname
+        CmsHostname: !Ref CmsHostname
+        ExchangeHostname: !Ref ExchangeHostname
+        BetaHostname: !Ref BetaHostname
+        CountHostname: !Ref CountHostname
+        LegacyCastleHostname: !Ref LegacyCastleHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
