--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -224,6 +224,8 @@ Resources:
       AuguryHostname: !If [IsProduction, augury.prx.org, augury.staging.prx.tech]
       BetaHostname: !If [IsProduction, beta.prx.org, beta.staging.prx.tech]
       CastleHostname: !If [IsProduction, castle.prx.tech, castle.staging.prx.tech]
+      LegacyCastleHostname: castle.prx.org
+      CountHostname: !If [IsProduction, count.prx.org, staging.count.prx.org]
       CmsHostname: !If [IsProduction, cms.prx.org, cms.staging.prx.tech]
       CorporateHostname: corporate.prx.tech
       DovetailCdnHostname: !If [IsProduction, dovetail3-cdn.prxu.org, dovetail3-cdn-staging.prxu.org]
@@ -857,8 +859,12 @@ Resources:
         DovetailCdnArrangerWorkspaceBucketArn: !GetAtt Apps100AStack.Outputs.DovetailCdnArrangerWorkspaceBucketArn
         S3StaticSiteDeployServiceToken: !GetAtt CustomResourcesStack.Outputs.S3StaticSiteDeployServiceToken
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
+        BetaHostname: !GetAtt Constants.BetaHostname
         CastleHostname: !GetAtt Constants.CastleHostname
+        LegacyCastleHostname: !GetAtt Constants.LegacyCastleHostname
         CmsHostname: !GetAtt Constants.CmsHostname
+        CountHostname: !GetAtt Constants.CountHostname
+        ExchangeHostname: !GetAtt Constants.ExchangeHostname
         FeederHostname: !GetAtt Constants.FeederHostname
         IdHostname: !GetAtt Constants.IdHostname
         MetricsHostname: !GetAtt Constants.MetricsHostname
