--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -47,6 +47,7 @@ Parameters:
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Resources:
   InstanceProfile:
@@ -410,6 +411,8 @@ Resources:
       Cluster: !Ref EcsClusterName
       CapacityProviders:
         - !Ref DefaultCapacityProvider
+        - !If [IsStaging, FARGATE, !Ref "AWS::NoValue"]
+        - !If [IsStaging, FARGATE_SPOT, !Ref "AWS::NoValue"]
       DefaultCapacityProviderStrategy:
         # With only one default capacity provider, the base and weight won't
         # factor into scheduling; everything will be even within the ASG
