--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -129,6 +129,7 @@ Parameters:
 Resources:
   ExchangeStack:
     Type: "AWS::CloudFormation::Stack"
+    Condition: IsProduction
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub "${InfrastructureNotificationsStackName}-CloudFormationNotificationSnsTopic"
