--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -863,11 +863,13 @@ Resources:
       Timeout: 30
   ASGSizerFunctionLogGroup:
     Type: AWS::Logs::LogGroup
+    Condition: IsProduction
     Properties:
       LogGroupName: !Sub /aws/lambda/${ASGSizerFunction}
       RetentionInDays: 60
   ASGSizerTriggerIAMRole:
     Type: "AWS::IAM::Role"
+    Condition: IsProduction
     Properties:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
