Make old container app stack prodution-only

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -275,6 +275,7 @@ Resources:
       TimeoutInMinutes: 5
   ContainerAppsRootStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsProduction
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
