Make old memcached stack prodution-only

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -462,6 +462,7 @@ Resources:
       TimeoutInMinutes: 5
   SharedMemcachedStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsProduction
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
