Make old ECS clsuter stack prodution-only

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -385,6 +385,7 @@ Resources:
       TimeoutInMinutes: 5
   ECSClusterStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsProduction
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
