Make old ALB stack production-only

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -421,6 +421,7 @@ Resources:
       TimeoutInMinutes: 5
   LoadBalancersStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsProduction
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
@@ -1166,9 +1167,11 @@ Outputs:
     Description: The ARN for the wildcard certificate for the VPC
     Value: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
   PlatformALBDNSName:
+    Condition: IsProduction
     Description: The DNS name for the platform application load balancer
     Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDNSName
   PlatformALBDualstackDNSName:
+    Condition: IsProduction
     Description: >
       The dualstack DNS name for the platform application load balancer
     Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
