Make old certificate stack production-only

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -368,6 +368,7 @@ Resources:
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/vpc.yml"]]
       TimeoutInMinutes: 5
   CertificateStack:
+    Condition: IsProduction
     Type: AWS::CloudFormation::Stack
     Properties:
       NotificationARNs:
@@ -1164,6 +1165,7 @@ Outputs:
     Value: !Ref EnvironmentType
 
   VPCCertificateArn:
+    Condition: IsProduction
     Description: The ARN for the wildcard certificate for the VPC
     Value: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
   PlatformALBDNSName:
