Add missing policy action

--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -253,6 +253,7 @@ Resources:
             Statement:
               - Action:
                   - sqs:ChangeMessageVisibility
+                  - sqs:DeleteMessage
                   - sqs:Get*
                   - sqs:List*
                   - sqs:ReceiveMessage
