Enable Docker init for Metrics

--- a/stacks/apps/metrics.yml
+++ b/stacks/apps/metrics.yml
@@ -219,6 +219,8 @@ Resources:
               Value: !Ref CastleHostname
           Essential: true
           Image: !Ref EcrImageTag
+          LinuxParameters:
+            InitProcessEnabled: true
           LogConfiguration:
             LogDriver: awslogs
             Options:
