Add more bucket parameters

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -58,6 +58,8 @@ Parameters:
   NetworksS3BucketArn: { Type: String }
   WfmtServicesS3BucketArn: { Type: String }
   AdFilesS3BucketArn: { Type: String }
+  RemixS3BucketArn: { Type: String }
+  TransferS3BucketArn: { Type: String }
   # Application Specific
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
