Add Remix hostname constant

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -238,6 +238,7 @@ Resources:
       MetricsHostname: !If [IsProduction, metrics.prx.org, metrics.staging.prx.tech]
       NetworksHostname: !If [IsProduction, networks.prx.org, networks.staging.prx.tech]
       PlayHostname: !If [IsProduction, play.prx.org, play.staging.prx.tech]
+      RemixHostname: !If [IsProduction, www.prx.mx, remix.staging.prx.tech]
       AdFilesHostname: a.prxu.org
       MetaHostname: meta.prx.org
 
