Add Slack relay topic constant

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -212,6 +212,8 @@ Resources:
         Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
       CloudFormationNotificationArn:
         Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+      SlackMessageRelaySnsTopicArn:
+        Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
       TemplateUrlBase:
         # This is a URL including the hostname of the source bucket, and the
         # path starting with a Git commit hash for the Infrastructure
