Refactor Remix task and envars

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -9,6 +9,7 @@ Description: >-
 Parameters:
   TemplateUrlPrefix: { Type: String }
   CloudFormationNotificationArn: { Type: String }
+  SlackMessageRelaySnsTopicArn: { Type: String }
   AlbFullName: { Type: String }
   AlbHttpsListenerArn: { Type: String }
   EcsClusterArn: { Type: String }
@@ -56,6 +57,7 @@ Parameters:
   MetricsHostname: { Type: String }
   NetworksHostname: { Type: String }
   PlayHostname: { Type: String }
+  RemixHostname: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
   SharedAuroraPostgresqlEndpoint: { Type: String }
@@ -65,6 +67,8 @@ Parameters:
   FeedsS3BucketArn: { Type: String }
   MediajointS3BucketArn: { Type: String }
   NetworksS3BucketArn: { Type: String }
+  RemixS3BucketArn: { Type: String }
+  TransferS3BucketArn: { Type: String }
 
   BetaPrxOrgArchiveS3ObjectKey: { Type: String }
   BetaPrxOrgCloudFrontOai: { Type: String }
@@ -387,10 +391,12 @@ Resources:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
       Parameters:
+        SlackMessageRelaySnsTopicArn: !Ref SlackMessageRelaySnsTopicArn
         AlbFullName: !Ref AlbFullName
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref RemixEcrImageTag
         SecretsVersion: !Ref RemixSecretsVersion
@@ -406,6 +412,10 @@ Resources:
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
+        RemixS3BucketArn: !Ref RemixS3BucketArn
+        TransferS3BucketArn: !Ref TransferS3BucketArn
+        RemixHostname: !Ref RemixHostname
+        ExchangeHostname: !Ref ExchangeHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
