--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -355,6 +355,7 @@ Resources:
               Value: !GetAtt TaskUserAccessKey.SecretAccessKey
             - Name: AWS_S3_BUCKET
               Value: !GetAtt Constants.NetworksS3BucketName
+            # TODO Needs an SQS_PREFIX once Exchange is moved to the new cluster
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -723,6 +724,7 @@ Resources:
               Value: !GetAtt TaskUserAccessKey.SecretAccessKey
             - Name: AWS_S3_BUCKET
               Value: !GetAtt Constants.NetworksS3BucketName
+            # TODO Needs an SQS_PREFIX once Exchange is moved to the new cluster
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
